# image_overlapping_project

./: .gitignore  README.md  dtw.py  pyproject.toml  remove_background.py  setup.cfg  setup.py  test.py
.BeeDriveWorkingDirectory/: yoUX6VQ5
alignment/: 1060_clear.csv  1061_clear.csv  alignment.py  feature.py
contours/: __init__.py  contours_start.py  draw_contours.py  draw_testdata.py  mark.py  output.py  point.py  temp.py  test_contours.csv  tip_detect.py  tips_rotated.py
findcontours/: find_contours.py  leaf_0017.csv  overlap2.csv  test_rdp.py  touch1.csv
overlap/: overlap.py
sliding_window/: sliding.py
src/: dtw.py
src/GUI/: gui.py  tempgui.py
src/analysis/: analysis.py
src/area_calculate/: ans_area.py  area.py  scenario1.py  test_five.py
src/area_calculate/test_data/: result.csv  result_all.csv  result_down.csv
src/contours/: draw_contours.py  dynamic.py  mark.py  output.py  point.py  rotate_180.py  tips_rotated.py
src/contours/output/: 7000_area.csv
src/dtw/: dtw.py
src/findcontours/: find_contours.py
src/overlap/: leaf1_edges.csv  overlap.py
src/rv_background/: remove_background.py
src/sliding_window/: sliding.py
test/pointup/: test.py  test_dtw.py
test/pointup/test_data/: 1060_test.csv  1061_test.csv
test/test_on_server/: test_five.py
test/test_on_server/9999/: 9999_10000.csv  9999_10000_all.csv  9999_10001.csv  9999_10001_all.csv  9999_10002.csv  9999_10002_all.csv
test/test_on_server/reference_grad_20/: 10000_clear_gradient.csv  10001_clear_gradient.csv  9999_clear_gradient.csv
watershed/: myself_watershed.py  watershed_test.py
(+1 files in other folders)
