[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "image_overlapping_project"
version = "0.0.1"
authors = [
  { name="YuHan ,Wu", email="jack57648893@gmail.com" },
]
description = "master project"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ComputationalAgronomy/image_overlapping_project.git"
"Bug Tracker" = "https://github.com/ComputationalAgronomy/image_overlapping_project/issues"

[tool.setuptools]
package-dir = {"" = "src"}



[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]
